--- a/playbooks/init.yml
+++ b/playbooks/init.yml
@@ -83,6 +83,35 @@
       become: yes
       notify: restart ssh
 
+    - name: Allow port 22
+      community.general.ufw:
+        rule: allow
+        direction: in
+        proto: tcp
+        port: "22"
+      become: yes
+
+    - name: Allow port 80
+      community.general.ufw:
+        rule: allow
+        direction: in
+        proto: tcp
+        port: "80"
+      become: yes
+
+    - name: Allow port 443
+      community.general.ufw:
+        rule: allow
+        direction: in
+        proto: tcp
+        port: "443"
+      become: yes
+
+    - name: Enable ufw
+      community.general.ufw:
+        state: enabled
+      become: yes
+
   handlers:
     - name: reboot
       reboot:
